# training-session-cmake

./: Algorithm.h  AlgorithmTest.cpp  CMakeLists.txt  Model.cpp  Model.h  OutputFile.cpp  OutputFile.h  algo_implementation.h  main.cpp
